# T4L_End2End

./: .editorconfig  .env.example  .flake8  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  test_nfl.py  tox.ini
.github/workflows/: ci.yml  pipeline-schedule.yml  simple-supabase.yml
config/: feeds.yaml
config/extraction/: allowlist.yaml
docs/: api.md  deployment.md  supabase-simple.md
memory/: constitution.md
migrations/: env.py  script.py.mako
migrations/versions/: 001_articles.py  002_feeds.py  003_processing_log.py  004_source_watermarks.py  005_indexes_and_performance_notes.py  006_reference_and_kg_tables.py
scripts/: demo.sh  run-all.sh
specs/001-core-pipeline/: CLAUDE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-vision-the-nfl/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/cli/: __init__.py
src/database/: connection.py  init_db.py  supabase_client.py  supabase_simple.py
src/models/: __init__.py  article.py  database.py  feed.py  kg.py  reference.py
src/services/: __init__.py  async_processor.py  claim_extractor.py  confidence.py  error_handler.py  feed_ingester.py  llm_classifier.py  log_aggregator.py  logger.py  metrics.py  nfl_extractor.py  nfl_reference_loader.py  openai_client.py  pipeline.py  relevance_filter.py  rss_parser.py  rule_filter.py  signature.py  simple_pipeline.py  sitemap_parser.py  summary.py
templates/: plan-template.md
tests/: conftest.py
tests/contract/: test_event_details.py  test_event_summary.py  test_events_list.py  test_feed_ingester.py  (+1 more)
(+48 files in other folders)
